up function change profile

--- a/ManagerHotelAPI/appsettings.json
+++ b/ManagerHotelAPI/appsettings.json
@@ -15,5 +15,8 @@
     "Audience": "https://localhost:44356",
     "Issuer": "https://localhost:44356",
     "ExpiryTimeInSeconds": 60
+  },
+  "Host": {
+    "Development": "https://localhost:44356/"
   }
 }
