update change device

--- a/ManagerHotelAPI/appsettings.json
+++ b/ManagerHotelAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyDB": "Server=canhvuduc\\MACPHAM;Database=HotelManager;Trusted_Connection=True;"
+    "MyDB": "Server=MACPHAM;Database=HotelManager;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
